<resources>
    <string name="app_name">EncrypChat</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="encrypchat">EncrypChat</string>
    <string name="register">Register</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="no_users_found">No Users Found</string>
    <string name="type_a_message">Type a Message</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="login">Login</string>
    <string name="email">Enter Email Address</string>
</resources>
