<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.galzant.encrypchat.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="365dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/username"
        android:layout_width="365dp"
        android:layout_height="49dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="363dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#000000"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/login"/>

</LinearLayout>